--- a/algorithm/For-offer/55.md
+++ b/algorithm/For-offer/55.md
@@ -2,6 +2,8 @@
 
 在一个排序的链表中，如何删除重复的结点？
 
+例如，链表1->2->3->3->4->4->5 处理后为 1->2->5
+
 ## 二、解题思路
 
 解决这个问题的第一步是确定删除的参数。当然这个函数需要输入待删除链表的头结点。头结点可能与后面的结点重复，也就是说头结点也可能被删除，所以在链表头添加一个结点。 
