--- a/algorithm/For-offer/19.md
+++ b/algorithm/For-offer/19.md
@@ -20,13 +20,16 @@ public class StackTest {
 
         for (int i = 0, j = 0; i < data1.length; i++) {
             stack.push(data1[i]);
-
+            j = 0;
             while (stack.size() > 0 && stack.peek() == data2[j]) {
                 stack.pop();
                 j++;
+                if (j == data2.length) {
+                    return true;
+                }
             }
         }
-        return stack.size() == 0;
+        return false;
     }
 }
 ```
